--- a/app/src/main/res/layout/activity_cosas_mercader.xml
+++ b/app/src/main/res/layout/activity_cosas_mercader.xml
@@ -9,11 +9,34 @@
     tools:layout_editor_absoluteX="0dp"
     tools:layout_editor_absoluteY="-19dp">
 
+    <LinearLayout
+        android:id="@+id/layout"
+        android:layout_width="133dp"
+        android:layout_height="46dp"
+        android:gravity="center"
+        app:layout_constraintBottom_toTopOf="@+id/textView4"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintTop_toTopOf="parent">
+
+        <ImageButton
+            android:id="@+id/btnplay"
+            android:layout_width="25dp"
+            android:layout_height="22dp"
+            android:background="@drawable/play" />
+
+        <ImageButton
+            android:id="@+id/btnpausa"
+            android:layout_width="29dp"
+            android:layout_height="23dp"
+            android:background="@drawable/pausa" />
+    </LinearLayout>
+
     <TextView
         android:id="@+id/textView4"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:layout_marginTop="36dp"
+        android:layout_marginTop="96dp"
         android:foregroundGravity="center"
         android:text="Este es el espacio que le queda a la mochila"
         app:layout_constraintEnd_toEndOf="parent"
@@ -21,16 +44,16 @@
         app:layout_constraintTop_toTopOf="parent" />
 
     <TextView
-        android:id="@+id/textView6"
-        android:layout_width="342dp"
-        android:layout_height="20dp"
-        android:layout_marginTop="124dp"
-        android:foregroundGravity="center"
-        android:text="Estos son los objetos que le quedan a la mochila"
+        android:id="@+id/infoObjetos"
+        android:layout_width="48dp"
+        android:layout_height="25dp"
+        android:gravity="center"
+        app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintHorizontal_bias="0.686"
+        app:layout_constraintHorizontal_bias="0.498"
         app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toTopOf="parent" />
+        app:layout_constraintTop_toBottomOf="@+id/textView6"
+        app:layout_constraintVertical_bias="0.057" />
 
     <TextView
         android:id="@+id/infoEspacio"
@@ -40,19 +63,21 @@
         android:gravity="center"
         app:layout_constraintBottom_toTopOf="@+id/textView6"
         app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintHorizontal_bias="0.498"
+        app:layout_constraintHorizontal_bias="0.495"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toBottomOf="@+id/textView4"
-        app:layout_constraintVertical_bias="0.0" />
+        app:layout_constraintVertical_bias="0.111" />
 
     <TextView
-        android:id="@+id/infoObjetos"
-        android:layout_width="48dp"
-        android:layout_height="25dp"
-        android:gravity="center"
-        app:layout_constraintBottom_toBottomOf="parent"
+        android:id="@+id/textView6"
+        android:layout_width="342dp"
+        android:layout_height="20dp"
+        android:layout_marginTop="184dp"
+        android:foregroundGravity="center"
+        android:text="Estos son los objetos que le quedan a la mochila"
         app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintHorizontal_bias="0.681"
         app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toBottomOf="@+id/textView6"
-        app:layout_constraintVertical_bias="0.049" />
+        app:layout_constraintTop_toTopOf="parent" />
+
 </androidx.constraintlayout.widget.ConstraintLayout>
