--- a/app/src/main/res/layout/activity_pantalla_resumen.xml
+++ b/app/src/main/res/layout/activity_pantalla_resumen.xml
@@ -5,17 +5,39 @@
     android:layout_width="match_parent"
     android:layout_height="match_parent"
     tools:context=".pantallaResumen">
+
+    <LinearLayout
+        android:id="@+id/layout"
+        android:layout_width="133dp"
+        android:layout_height="46dp"
+        android:gravity="center"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintTop_toTopOf="parent">
+
+        <ImageButton
+            android:id="@+id/btnplay"
+            android:layout_width="25dp"
+            android:layout_height="22dp"
+            android:background="@drawable/play" />
+
+        <ImageButton
+            android:id="@+id/btnpausa"
+            android:layout_width="29dp"
+            android:layout_height="23dp"
+            android:background="@drawable/pausa" />
+    </LinearLayout>
+
+
     <EditText
         android:id="@+id/editText"
         android:layout_width="244dp"
         android:layout_height="41dp"
-        android:layout_marginTop="44dp"
         android:hint="Nombre del Personaje"
         app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintHorizontal_bias="0.498"
+        app:layout_constraintHorizontal_bias="0.497"
         app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toTopOf="parent" />
-
+        app:layout_constraintTop_toBottomOf="@+id/layout" />
 
     <TableLayout
         android:id="@+id/tableLayout"
