--- a/app/src/main/res/layout/activity_pelea.xml
+++ b/app/src/main/res/layout/activity_pelea.xml
@@ -6,14 +6,38 @@
     android:layout_height="match_parent"
     tools:context=".pelea">
 
+    <LinearLayout
+        android:id="@+id/layout"
+        android:layout_width="133dp"
+        android:layout_height="46dp"
+        android:gravity="center"
+        app:layout_constraintBottom_toTopOf="@+id/textView10"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintTop_toTopOf="parent">
+
+        <ImageButton
+            android:id="@+id/btnplay"
+            android:layout_width="24dp"
+            android:layout_height="23dp"
+            android:background="@drawable/play" />
+
+        <ImageButton
+            android:id="@+id/btnpausa"
+            android:layout_width="25dp"
+            android:layout_height="23dp"
+            android:background="@drawable/pausa" />
+    </LinearLayout>
+
     <ProgressBar
         android:id="@+id/progressBarEnemigo"
         style="?android:attr/progressBarStyleHorizontal"
         android:layout_width="248dp"
         android:layout_height="18dp"
-        android:layout_marginTop="12dp"
+        android:layout_marginTop="24dp"
+        android:progressBackgroundTint="#FF0000"
         app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintHorizontal_bias="0.498"
+        app:layout_constraintHorizontal_bias="0.496"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toBottomOf="@+id/textView10" />
 
@@ -33,6 +57,7 @@
         android:layout_width="228dp"
         android:layout_height="15dp"
         android:layout_marginTop="88dp"
+        android:progressBackgroundTint="#FF0000"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toBottomOf="@+id/imageView5" />
@@ -43,6 +68,7 @@
         android:layout_height="wrap_content"
         android:layout_marginStart="40dp"
         android:layout_marginTop="60dp"
+        android:backgroundTint="#816409"
         android:text="Atacar"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintStart_toStartOf="parent"
@@ -54,6 +80,7 @@
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:layout_marginStart="28dp"
+        android:backgroundTint="#816409"
         android:text="huir"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintStart_toEndOf="@+id/botonAtaque"
@@ -64,6 +91,7 @@
         android:id="@+id/botonObjeto"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
+        android:backgroundTint="#816409"
         android:text="Objeto"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
@@ -76,10 +104,11 @@
         android:id="@+id/textView10"
         android:layout_width="131dp"
         android:layout_height="22dp"
-        android:layout_marginTop="28dp"
+        android:layout_marginTop="52dp"
         android:gravity="center"
         android:text="Vida Enemigo"
         app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintHorizontal_bias="0.496"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toTopOf="parent" />
 
